# comp4300-a2

./: ASSIGNMENT02.md  CMakeLists.txt  PlayGame.sh  README.md  main.cpp
assets/data/: config.txt
docs/: arch_info.txt  architecture.txt  dev_notes.txt
include/: Components.h  Entity.h  EntityManager.h  FileUtils.h  Game.h  Vec2.h
src/: Entity.cpp  EntityManager.cpp  FileUtils.cpp  Game.cpp  Vec2.cpp
